# arepyextras-iers_solid_tides

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
arepyextras/iers_solid_tides/: __init__.py  __main__.py
arepyextras/iers_solid_tides/resources/: __init__.py
arepyextras/iers_solid_tides/wrapper/: __init__.py  main.py
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/reference/api/: index.rst  wrapper.rst
source/: CMakeLists.txt
source/include/core/: solid.h
source/src/: CMakeLists.txt
source/src/core/: CMakeLists.txt  solid.f90  solid_core.for
source/test/: CMakeLists.txt
source/test/core/: CMakeLists.txt  solid_test.cpp
source/test/refs/: solid_test.out
source/test/tools/: test_driver.sh
tests/: __init__.py  test_iers_solid_earth_tides_main.py
