# Copyright (C) 2024 Aresys S.r.l.

cmake_minimum_required(VERSION 3.14)

project(SOLIDTools VERSION 1.0.0 LANGUAGES C CXX Fortran)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

include(GNUInstallDirs)

add_subdirectory(src)

option(SOLIDTools_TESTING "Enable build and execution of test programs" OFF)
if(SOLIDTools_TESTING)
    enable_testing()
    add_subdirectory(test)
endif()

set(CPACK_PACKAGE_VENDOR "Aresys S.r.l.")
set(CPACK_PACKAGE_VERSION_MAJOR "${SOLIDTools_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${SOLIDTools_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${SOLIDTools_VERSION_PATCH}")
if(SOLIDTools_VERSION_TWEAK)
    set(CPACK_PACKAGE_VERSION_TWEAK "${SOLIDTools_VERSION_TWEAK}")
endif()
set(CPACK_PACKAGE_VERSION "${SOLIDTools_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SOLIDTools")
if(WIN32)
    set(CPACK_SOURCE_GENERATOR "ZIP")
else()
    set(CPACK_SOURCE_GENERATOR "TGZ")
endif()
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY TRUE)
set(CPACK_ARCHIVE_COMPONENT_INSTALL TRUE)
set(CPACK_COMPONENT_INCLUDE_TOPLEVEL_DIRECTORY TRUE)
set(CPACK_STRIP_FILES TRUE)
include(CPack)
